<resources>
    <string name="app_name">4 Buttons</string>
    <string name="title_activity_fave_city">FaveCity</string>

    <string name="favourite_city_caption">My Favourite City</string>
    <string name="phone_details_caption">Phone Details</string>
    <string name="server_info_caption">Server Info</string>
    <string name="colourGame">Colour Memory Game</string>
    <string name="default_value">Unknown</string>

    <string name="curr_city_cap">Your Current City: </string>
    <string name="manuf_cap">Phone Manufacturer: </string>
    <string name="model_cap">Phone Model: </string>
    <string name="loading_cap">Loading...</string>

    <string name="server_ip_cap">Server IP Address: </string>
    <string name="client_ip_cap">Client IP Address: </string>
    <string name="server_time_cap">Server Local Time: </string>
    <string name="client_time_cap">Client Local Time: </string>
    <string name="backend_name_cap">My Name: </string>
    <string name="logged_in_name_cap">Logged In As: </string>

    <string name="colour_game_title">Colour Memory Game</string>
    <string name="new_game_cap">New Game</string>
    <string name="reset_cap">Reset High Score</string>
    <string name="score_cap">Score:</string>
    <string name="high_cap">High Score:</string>
    <string name="colour0_cap">△</string>
    <string name="colour1_cap">□</string>
    <string name="colour2_cap">○</string>
    <string name="colour3_cap">◊</string>



</resources>