<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneDetails">

    <TextView
        android:id="@+id/manuf_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manuf_cap"
        app:layout_constraintBottom_toTopOf="@+id/model_text"
        app:layout_constraintStart_toStartOf="@+id/model_text"
        app:layout_constraintTop_toBottomOf="@+id/current_city_text"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/current_city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curr_city_cap"
        app:layout_constraintBottom_toTopOf="@+id/manuf_text"
        app:layout_constraintStart_toStartOf="@+id/manuf_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/model_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/model_cap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manuf_text"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>