<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ServerInfo"
    tools:layout_editor_absoluteX="-88dp"
    tools:layout_editor_absoluteY="13dp">

    <TextView
        android:id="@+id/server_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/server_info_caption"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/server_ip_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/server_ip_cap"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/client_ip_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_info_title"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/server_ip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/server_ip_caption"
        app:layout_constraintTop_toBottomOf="@+id/server_ip_caption" />

    <TextView
        android:id="@+id/client_ip_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_ip_cap"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/server_time_caption"
        app:layout_constraintStart_toStartOf="@+id/server_ip_caption"
        app:layout_constraintTop_toBottomOf="@+id/server_ip_caption"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/client_ip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/client_ip_caption"
        app:layout_constraintTop_toBottomOf="@+id/client_ip_caption" />

    <TextView
        android:id="@+id/server_time_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_time_cap"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/client_time_caption"
        app:layout_constraintStart_toStartOf="@+id/client_ip_caption"
        app:layout_constraintTop_toBottomOf="@+id/client_ip_caption"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/server_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/server_time_caption"
        app:layout_constraintTop_toBottomOf="@+id/server_time_caption" />

    <TextView
        android:id="@+id/client_time_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_time_cap"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/backend_name_caption"
        app:layout_constraintStart_toStartOf="@+id/server_time_caption"
        app:layout_constraintTop_toBottomOf="@+id/server_time_caption"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/client_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/client_time_caption"
        app:layout_constraintTop_toBottomOf="@+id/client_time_caption" />

    <TextView
        android:id="@+id/backend_name_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backend_name_cap"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logged_in_name_caption"
        app:layout_constraintStart_toStartOf="@+id/client_time_caption"
        app:layout_constraintTop_toBottomOf="@+id/client_time_caption"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/backend_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/backend_name_caption"
        app:layout_constraintTop_toBottomOf="@+id/backend_name_caption" />

    <TextView
        android:id="@+id/logged_in_name_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in_name_cap"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/backend_name_caption"
        app:layout_constraintTop_toBottomOf="@+id/backend_name_caption"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/logged_in_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/logged_in_name_caption"
        app:layout_constraintTop_toBottomOf="@+id/logged_in_name_caption" />

</androidx.constraintlayout.widget.ConstraintLayout>