<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <android.widget.Button
        android:id="@+id/favourite_city_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/main_buttons"
        android:text="@string/favourite_city_caption"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone_details_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9" />

    <android.widget.Button
        android:id="@+id/server_info_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_buttons"
        android:text="@string/server_info_caption"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/surprise_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_details_button"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9" />

    <android.widget.Button
        android:id="@+id/surprise_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_buttons"
        android:text="@string/colourGame"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_info_button"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9" />

    <android.widget.Button
        android:id="@+id/phone_details_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_buttons"
        android:text="@string/phone_details_caption"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/server_info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourite_city_button"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Fun App"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>